# modep-rig

./: .gitignore  CHANGES_RIG_UI_FIX.md  MAKE_BEFORE_BREAK.md  MAKE_BEFORE_BREAK_COMPLETE.md  README.md  config.example.toml  config.toml  config_mod.toml  config_mod_audio.toml  config_modep.toml  plugins.json  plugins_output.toml  pyproject.toml  rig_ui.py  todo.md
scripts/: generate_config.py  guitarix-connect.tmp.py  merge_configs.py  mirror.py  mod_socket.py  slave.py
src/mod_rack/: __init__.py  __main__.py  client.py  config.py  controls.py  gui.py  plugin.py  qrack.py  rack.py  service.py
src/modep_rig/: __init__.py  __main__.py  client.py  config.py  controls.py  plugin.py  qrig.py  rig.py
tests/: test_make_before_break.py
tools/: host.py
