[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modep-rig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.10.1",
    "requests>=2.32.5",
    "tomli>=2.4.0",
    "websocket-client>=1.9.0",
]

[project.scripts]
modep-qrig = "modep_rig.qrig:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
