[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mod-rack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.10.1",
    "requests>=2.32.5",
    "tomli>=2.4.0",
    "websocket-client>=1.9.0",
]

[project.scripts]
mod-rack = "mod_rack.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "types-requests>=2.32.4.20260107",
]
